// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api info identity should return identity 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/kube-system/configmaps/cluster-identity",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
]
`;

exports[`api info identity should return identity 2`] = `
Object {
  "clusterIdentity": "test-id",
}
`;

exports[`api info version should reject requests csrf protection error 1`] = `
Object {
  "code": 403,
  "details": Any<Object>,
  "message": "Request has been blocked by CSRF protection",
  "reason": "Forbidden",
  "status": "Failure",
}
`;

exports[`api info version should reject requests with invalid audience 1`] = `
Object {
  "code": 401,
  "details": Any<Object>,
  "message": "jwt audience invalid. expected: gardener",
  "reason": "Unauthorized",
  "status": "Failure",
}
`;

exports[`api info version should reject requests with invalid signature 1`] = `
Object {
  "code": 401,
  "details": Any<Object>,
  "message": "invalid signature",
  "reason": "Unauthorized",
  "status": "Failure",
}
`;

exports[`api info version should reject requests without authorization header 1`] = `
Object {
  "code": 401,
  "details": Any<Object>,
  "message": "No authorization token was found",
  "reason": "Unauthorized",
  "status": "Failure",
}
`;

exports[`api info version should return information with version 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/apiregistration.k8s.io/v1/apiservices/v1beta1.core.gardener.cloud",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
  Array [
    Object {
      ":authority": "gardener-apiserver.gardener",
      ":method": "get",
      ":path": "/version",
      ":scheme": "https",
    },
  ],
]
`;

exports[`api info version should return information with version 2`] = `
Object {
  "gardenerVersion": Object {
    "major": "1",
    "minor": "0",
  },
  "version": Any<String>,
}
`;

exports[`api info version should return information without version 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/apiregistration.k8s.io/v1/apiservices/v1beta1.core.gardener.cloud",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwic3ViIjoic3lzdGVtOnNlcnZpY2VhY2NvdW50OmdhcmRlbjpkZWZhdWx0In0.-4rSuvvj5BStN6DwnmLAaRVbgpl5iCn2hG0pcqx0NPw",
    },
  ],
  Array [
    Object {
      ":authority": "gardener-apiserver.gardener",
      ":method": "get",
      ":path": "/version",
      ":scheme": "https",
    },
  ],
]
`;

exports[`api info version should return information without version 2`] = `
Object {
  "version": Any<String>,
}
`;
